# ray

./: .clang-format  .gitignore  CMakeLists.txt  README.md  config.local.example
export_nff/: README  __init__.py  hammasratas.blend  hammasratas_flat.nff  hammasratas_smooth.nff  nff_exporter.py  spring-20120510.nff  test.nff  umpalumpa.blend  umpalumpa.nff  umpalumpa_smooth.nff
export_nff/Kuubik/: 1244039372830.tga  1252602491008.tga  1282883696465.tga  kuubik.blend  kuubik.blend1  kuubik.blend2  test.nff  test2.nff  test3.nff
include/: .common.h.swp  aabb.h  area_light.h  background_light.h  brdf.h  camera.h  common.h  directional_light.h  frame.h  framebuffer.h  geometry.h  hashgrid.h  intersection.h  itriangle.h  kdtree_primitive_manager.h  light.h  material.h  materials.h  naive_primitive_manager.h  nff_scene_reader.h  parser.h  pathtracer.h  pixel.h  png_surface.h  point_light.h  primitive.h  primitive_manager.h  random.h  ray.h  raytracer.h  rectangle.h  renderer.h  sampler.h  scene.h  scene_reader.h  scene_sphere.h  sdl_surface.h  sphere.h  sphere_cap.h  spotlight.h  (+9 more)
nff/: balls1.nff  balls2.nff  balls3.nff  balls4.nff  balls5.nff  cornell-spheres.nff  cornell.nff  earth_sphere.tga  mount.nff  new-cornell.nff  nurbtst.nff  refract-test.nff  shells.nff  spotlight.nff  stupid.nff  teapot.nff  tetra3.nff  tetra4.nff  tetra5.nff  tetra6.nff  tetra7.nff  texture1.nff  texture2.nff
src/: CMakeLists.txt  camera.cpp  framebuffer.cpp  geometry.cpp  intersection.cpp  kdtree_primitive_manager.cpp  main.cpp  naive_primitive_manager.cpp  nff_scene_reader.cpp  parser.cpp  png_surface.cpp  random.cpp  ray.cpp  renderer.cpp  scene.cpp  sdl_surface.cpp  tga_reader.cpp  tga_surface.cpp  uniform_sampler.cpp
